force-app/main/default/objects/Book_Project__c/Book_Project__c.object-meta.xml
<CustomObject>
    <label>Book Project</label>
    <nameField>
        <label>Book Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Book Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>