force-app/main/default/objects/Book_Project__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date of when the book project is uploaded</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>