force-app/main/default/objects/Book_Project__c/validationRules/Content_not_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Content_not_empty</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Content__c) &lt;=0 || ISBLANK(Content__c)</errorConditionFormula>
    <errorMessage>Content should not be empty. Either upload a file or paste your text onto the provided field</errorMessage>
</ValidationRule>